log_test.txt
Traceback (most recent call last):
  File "E:\wbank\main.py", line 50, in <module>
    from models import *
  File "E:\wbank\models.py", line 35
    metamask_address = db.Column(db.String(128), default=''''''')
                                                               ^
SyntaxError: unterminated string literal (detected at line 35)
